test/libsolidity/syntaxTests/uncheckedArray/uncheckedArray_post_for.sol
contract C {
    function f() public pure {
        for (uint x = 2; x < 2; uncheckedArray { x ++; }) {

        }
    }
}
// ----
// ParserError 6933: (76-85): Expected primary expression.
